    - Fir saplings require a spruce sapling, white dye (or bonemeal), and a fertilizer.
    - Red autumn saplings require a cherry sapling, red dye, and a fertilizer.
    - Orange autumn saplings require an oak sapling, orange dye, and a fertilizer.
    - Yellow autumn saplings require a birch sapling, yellow dye, and a fertilizer.
- Added calcite - loose calcite cobblestone can be crated by combining loose diorite cobblestone with bonemeal in a crucible
- Changed deco stone variants to behave consistently with BTW stone.
    - Granite, andesite, diorite, and calcite are all considered first strata.
    - Slate is considered third strata.
- Changed how lanterns render, and added item equivalents. The old blocks may be converted into items in a crafting grid.
- Changed lanterns to break when underwater.
- Changed wrought iron bars and paper walls to output more when crafting.
- Changed red sand (blocks and piles) to be a subtype of regular sand. Old red sand may be converted into new red sand in a crafting grid.
- Changed red sand to be crafted with 8 sand and 1 red dye to make 8.
- Changed the recipe for coarse dirt to produce 2.
- Added the ability to filter coarse dirt through a wicker filter in a hopper to separate it into dirt and gravel.
- Changed the recipe for podzol to be 8 coarse dirt and a spruce or fir leaf block to make 8.
- Changed the recipe for empty bottle racks to use an 'I' shape instead of an 'X' (high efficiency recipe uses siding on top and bottom and moulding everywhere else).
- Changed the names of flower textures to be more descriptive.
- Changed magma to be made by heating netherrack in a kiln, and removed superheated netherrack.
- Changed nether brick to turn into brick in a kiln, and removed superheated nether brick.
- Changed hay bales and thatch to be made of 8 items instead of 9, and added the ability to decraft stairs into items.