@@ -1,0 +1,10 @@
+package deco.block.mixins;
+
+import deco.block.util.BlockInterface;
+import net.minecraft.src.Block;
+import net.minecraft.src.IBlockAccess;
+import org.spongepowered.asm.mixin.Mixin;
+
+@Mixin(Block.class)
+public class BlockMixin implements BlockInterface {
+}
