@@ -4,11 +4,14 @@
   "package": "deco.block.mixins",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
+    "BlockMixin",
     "BloodWoodLogMixin",
     "BookshelfBlockMixin",
+    "CocoaPlantBlockMixin",
     "GrassBlockMixin",
     "GrassSlabBlockMixin",
     "LadderBlockFlamingMixin",
+    "LogBlockMixin",
     "LooseDirtBlockMixin",
     "ObsidianBlockMixin",
     "PlanksBlockMixin",
